sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '=' expected but ';' found.
  var tmp_value;
               ^AlgBubbleSort1:6: error: illegal start of simple pattern
    for(int i = 0; i < tab.length - 2; i++){
              ^AlgBubbleSort1:6: error: '<-' expected but ';' found.
    for(int i = 0; i < tab.length - 2; i++){
                 ^AlgBubbleSort1:6: error: '<-' expected but ';' found.
    for(int i = 0; i < tab.length - 2; i++){
                                     ^AlgBubbleSort1:6: error: illegal start of simple pattern
    for(int i = 0; i < tab.length - 2; i++){
                                          ^AlgBubbleSort1:14: error: illegal start of simple expression
  }while(tab_has_changed);
  ^